# iris

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  draco_raytracer.sln  draco_raytracer.vcxproj  draco_raytracer.vcxproj.filters
Builds/: BuildMultipleObjects.cpp  BuildMultipleObjects.cpp~  BuildSingleSphere.cpp
Source/: Constants.h  Prerequisites.h  StandardHeaders.h  main.cpp
cmake/: FindFreeImage.cmake
docs/: CNAME  _ambient_8h.html  _ambient_8h_source.html  _b_r_d_f_8h.html  _b_r_d_f_8h_source.html  _camera_8h_source.html  _directional_8h_source.html  _hammersley_8h.html  _hammersley_8h_source.html  _jittered_8h.html  _jittered_8h_source.html  _lambertian_8h_source.html  _light_8h.html  _light_8h_source.html  _logger_8h_source.html  _lua_state_8h.html  _lua_state_8h_source.html  _material_8h.html  _matte_8h.html  _multi_jittered_8h_source.html  _multiple_objects_8h_source.html  _object_8h_source.html  _orthographic_8h.html  _orthographic_8h_source.html  _phong_8h.html  _phong_8h_source.html  _pinhole_8h.html  _plane_8h.html  _r_g_b_color_8h.html  _ray_cast_8h_source.html  _regular_8h_source.html  _state_8h.html  _surface_8h.html  _surface_8h_source.html  _view_plane_8h.html  _view_plane_8h_source.html  _world_8h.js  _world_8h_source.html  class_ambient.html  class_ambient.js  (+110 more)
examples/: BuildMultipleObjects.cpp  Scene.lua  TestScene.lua  TestScene3.lua
src/: Constants.h  Core.cpp  Hammersley.cpp  Hammersley.h  Jittered.cpp  Jittered.h  Makefile  MultiJittered.cpp  MultiJittered.h  MultipleObjects.cpp  MultipleObjects.h  NRooks.cpp  NRooks.h  Object.cpp  Object.h  Plane.cpp  Plane.h  PureRandom.cpp  PureRandom.h  RGBColor.cpp  RGBColor.h  Ray.cpp  Ray.h  Regular.cpp  Regular.h  Sampler.cpp  Sampler.h  (+17 more)
(+608 files in other folders)
